# cwb

./: .editorconfig  AUTHORS  CHANGES  CMakeLists.txt  COPYING  INSTALL  Makefile  config.mk  cwb-install-fedora  cwb-install-ubuntu  definitions.mk
CQi/: auth.c  auth.h  cqi.h  cqpserver.c  server.c  server.h
cl/: CMakeLists.txt  Makefile  attributes.c  attributes.h  binsert.c  binsert.h  bitfields.c  bitfields.h  bitio.c  bitio.h  cdaccess.c  cdaccess.h  cl.h  class-mapping.c  class-mapping.h  compression.c  compression.h  corpus.c  corpus.h  dl_stub.c  endian.c  endian.h  fileutils.c  fileutils.h  globals.c  globals.h  lexhash.c  lexhash.h  list.c  list.h  macros.c  macros.h  makecomps.c  makecomps.h  ngram-hash.c  ngram-hash.h  registry.l  registry.tab.h  registry.y  regopt.c  (+7 more)
config/platform/: cygwin  darwin  darwin-64  darwin-core2  darwin-g4  darwin-g5  darwin-i386  darwin-universal  linux  mingw  solaris  template  unix
config/site/: beta-install  solaris-release  windows-release
cqp/: CMakeLists.txt  Makefile  ascii-print.c  ascii-print.h  attlist.c  attlist.h  builtins.c  builtins.h  concordance.c  concordance.h  context_descriptor.c  context_descriptor.h  corpmanag.c  corpmanag.h  cqp.c  cqp.h  cqpcl.c  dummy_auth.c  eval.c  eval.h  groups.c  groups.h  hash.c  hash.h  html-print.c  html-print.h  latex-print.c  latex-print.h  llquery.c  macro.c  macro.h  matchlist.c  matchlist.h  options.c  options.h  output.c  output.h  parse_actions.c  parse_actions.h  parser.l  (+23 more)
doc/: code_overview.html  code_overview.textile  coding-standards.textile  doxygen-config  hard_limits.txt  todo-3.5  unicode_roadmap.html  unicode_roadmap.textile  version-numbering-rules.html  version-numbering-rules.textile
doc/html/: _c_qi_2cqi_8h.html  annotated.html  ascii-print_8c.html  ascii-print_8h.html  attlist_8c.html  attlist_8h.html  attributes_8c.html  attributes_8h.html  auth_8c.html  auth_8h.html  barlib_8c.html  barlib_8d.html  barlib_8h.html  binsert_8c.html  binsert_8h.html  bitfields_8c.html  bitfields_8h.html  bitio_8c.html  bitio_8h.html  build_2cwb-3_81_8b0-windows-i586_2include_2cwb_2cqi_8h.html  build_2cwb-3_82_85-windows-i586_2include_2cwb_2cl_8h.html  build_2cwb-3_82_85-windows-i586_2include_2cwb_2cqi_8h.html  builtins_8c.html  builtins_8h.html  cdaccess_8c.html  cdaccess_8h.html  cl_2cl_8h.html  cl_8h.html  class-mapping_8c.html  class-mapping_8h.html  classes.html  compression_8c.html  compression_8h.html  concordance_8c.html  concordance_8h.html  context__descriptor_8c.html  context__descriptor_8h.html  corpmanag_8c.html  corpmanag_8h.html  corpus_8c.html  (+416 more)
editline/: Makefile  README  config.status  editline_config.h  test_sh.c  vc_editline_config.h
editline/src/: editline.c
include/: msvc.h
install-scripts/: cwb-build-win32  cwb-config-basic  cwb-install-fedora  cwb-install-mac-osx  cwb-install-ubuntu  install-linux
instutils/: INSTALL  Makefile  install-cwb-win.bat.in
man/: Makefile  cqp.pod  cqpcl.pod  cqpserver.pod  cwb-align-encode.pod  cwb-align-show.pod  cwb-align.pod  cwb-atoi.pod  cwb-compress-rdx.pod  cwb-config.pod  cwb-decode-nqrfile.pod  cwb-decode.pod  cwb-describe-corpus.pod  cwb-encode.pod  cwb-huffcode.pod  cwb-itoa.pod  cwb-lexdecode.pod  cwb-makeall.pod  cwb-s-decode.pod  cwb-s-encode.pod  cwb-scan-corpus.pod
utils/: CMakeLists.txt  Makefile  barlib.c  barlib.h  cwb-align-decode.c  cwb-align-encode.c  cwb-align-show.c  cwb-align.c  cwb-atoi.c  cwb-check-input.c  cwb-compress-rdx.c  cwb-decode-nqrfile.c  cwb-decode.c  cwb-describe-corpus.c  cwb-encode.c  cwb-huffcode.c  cwb-itoa.c  cwb-lexdecode.c  cwb-makeall.c  cwb-s-decode.c  cwb-s-encode.c  cwb-scan-corpus.c  feature_maps.c  feature_maps.h
